--- a/avx-awsmp-BYOL.template
+++ b/avx-awsmp-BYOL.template
@@ -330,7 +330,9 @@
                        "sqs:ReceiveMessage",
                        "sqs:RemovePermission",
                        "sqs:SendMessage",
-                       "sqs:SetQueueAttributes"
+                       "sqs:SetQueueAttributes",
+                       "sqs:TagQueue"
+
                    ],
                    "Resource": "*"
                },
